unpackaged/main/default/objects/Clinical_Trial_Location__c/Clinical_Trial_Location__c.object-meta.xml
<CustomObject>
    <label>Clinical Trial Location</label>
    <nameField>
        <displayFormat>CTLID-{0000}</displayFormat>
        <label>Clinical Trial Location Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Trial Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>