unpackaged/main/default/objects/Clinical_Trial_Location__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <label>Facility</label>
    <type>TextArea</type>
</CustomField>