unpackaged/main/default/objects/Clinical_Trial_Location__c/fields/Geocode__c.field-meta.xml
<CustomField>
    <fullName>Geocode__c</fullName>
    <label>Geocode</label>
    <scale>0</scale>
    <type>Location</type>
</CustomField>