unpackaged/main/default/objects/Clinical_Trial_Location__c/fields/Trial_Location_Key__c.field-meta.xml
<CustomField>
    <fullName>Trial_Location_Key__c</fullName>
    <description>To attempt to avoid duplicating Trial &amp; Location information</description>
    <externalId>true</externalId>
    <label>Trial Location Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>